# OCR_AGENT

./: BILL_INFO.md  README.md  pyproject.toml
knowledge/: user_preference.txt
src/ocr_ollama/: crew.py  main.py
src/ocr_ollama/config/: agents.yaml  tasks.yaml
src/ocr_ollama/tools/: custom_tool.py
