[project]
name = "ocr_ollama"
version = "0.1.0"
description = "ocr_ollama using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
ocr_ollama = "ocr_ollama.main:run"
run_crew = "ocr_ollama.main:run"
train = "ocr_ollama.main:train"
replay = "ocr_ollama.main:replay"
test = "ocr_ollama.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
